Fix scroll on mobile devices
Changing the header to fixed prevents it being scrolled with the main
body.
Disabling the mouchemove form everything but the content prevents the
page from overscrolling on touch events.
md-cards has overscroll enabled that causes a strange scroll on
the discussion details.

--- a/app/assets/stylesheets/components/_detailed_discussion.css.sass
+++ b/app/assets/stylesheets/components/_detailed_discussion.css.sass
@@ -1,5 +1,7 @@
 .DetailedDiscussion
   background: theme-palette(neutral, white)
+  // necessary to override md-content
+  overflow: hidden
 
 .DetailedDiscussion-title
   @include alpha
